testsuite/tests/rep-poly/RepPolyMcGuard.stderr

RepPolyMcGuard.hs:30:16: error:
    • • The first argument to (>>),
        arising from the monad comprehension,
        does not have a fixed runtime representation:
          ma0 :: TYPE rep
      • The argument to ‘guard’,
        arising from the monad comprehension,
        does not have a fixed runtime representation:
          a0 :: TYPE rep
    • In a stmt of a monad comprehension: undefined
      In the expression: [() | undefined]
      In an equation for ‘foo’: foo _ = [() | undefined]
